<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffeecc"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceleracion"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textStyle="normal|bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="11sp"
        android:background="?android:attr/listDivider"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_x"
        android:textSize="15sp"
        android:gravity="start"
        android:layout_margin="5dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textView_Ax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acelareci_n_x"
        android:textSize="15sp"
        android:gravity="start"
        android:layout_margin="10dp"
        android:textStyle="normal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:background="?android:attr/listDivider"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_y"
        android:textSize="15sp"
        android:gravity="start"
        android:layout_margin="5dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textView_Ay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acelareci_n_y"
        android:textSize="15sp"
        android:gravity="start"
        android:layout_margin="10dp"
        android:textStyle="normal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:background="?android:attr/listDivider"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_z"
        android:textSize="15sp"
        android:gravity="start"
        android:layout_margin="5dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textView_Az"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceleraci_n_z"
        android:textSize="15sp"
        android:gravity="start"
        android:layout_margin="10dp"
        android:textStyle="normal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:background="?android:attr/listDivider"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_m_dulo"
        android:textSize="15sp"
        android:gravity="start"
        android:layout_margin="5dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textView_Amodulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_m_dulo"
        android:textSize="15sp"
        android:gravity="start"
        android:layout_margin="10dp"
        android:textStyle="normal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:background="?android:attr/listDivider"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_m_xima"
        android:textSize="15sp"
        android:gravity="start"
        android:layout_margin="10dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textView_Amaxima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_m_xima"
        android:textSize="15sp"
        android:gravity="start"
        android:layout_margin="5dp"
        android:textStyle="normal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:background="?android:attr/listDivider"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravedad"
        android:textSize="15sp"
        android:gravity="start"
        android:layout_margin="5dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textView_gravedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravedad"
        android:textSize="15sp"
        android:gravity="start"
        android:layout_margin="10dp"
        android:textStyle="normal"/>
</LinearLayout>